--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-numpy==1.23.5
-streamlit==1.16.0
-pandas==1.5.2
-scikit_learn==1.2.0
-altair<5
-flask==3.1.0
-pickle
+Flask==2.3.3
+numpy==1.25.1
+scikit-learn==1.3.0
+gunicorn==21.2.0
+pandas==2.1.0
+scikit-learn==1.3.0
